* switch output and error stream to non blocking and snooze between each run. * read error messages and present an alert with the option to stop processing * should fix #1870 and help with #5009

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@38871 a95241bf-73f2-0310-859d-f6bbb57e9c96