src/apps/expander/ExpanderThread.h
@@ -1,30 +1,8 @@
-/*****************************************************************************/
-// Expander
-// Written by Jérôme Duval
-//
-// ExpanderThread.h
-//
-// Copyright (c) 2004 OpenBeOS Project
-//
-// Permission is hereby granted, free of charge, to any person obtaining a
-// copy of this software and associated documentation files (the "Software"),
-// to deal in the Software without restriction, including without limitation
-// the rights to use, copy, modify, merge, publish, distribute, sublicense,
-// and/or sell copies of the Software, and to permit persons to whom the
-// Software is furnished to do so, subject to the following conditions:
-//
-// The above copyright notice and this permission notice shall be included
-// in all copies or substantial portions of the Software.
-//
-// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS
-// OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL
-// THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
-// FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
-// DEALINGS IN THE SOFTWARE.
-/*****************************************************************************/
-
+/*
+ * Copyright 2004-2010, Jérôme Duval. All rights reserved.
+ * Distributed under the terms of the MIT License.
+ * Original code from ZipOMatic by jonas.sundstrom@kirilla.com
+ */
 #ifndef __EXPANDERTHREAD_H__
 #define __EXPANDERTHREAD_H__
 
@@ -74,8 +52,8 @@ class ExpanderThread : public GenericThread
 		int				fStdOut;
 		int				fStdErr;
 		FILE *			fExpanderOutput;
-		BString			fExpanderOutputString;
-		char *			fExpanderOutputBuffer;
+		FILE *			fExpanderError;
+		char			fExpanderOutputBuffer[LINE_MAX];
 };
 
 #endif // __EXPANDERTHREAD_H__
